# avr-hal

./: Cargo.toml  README-fork.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
arduino-hal/: Cargo.toml
avr-hal-generic/: Cargo.toml
cargo-avr/: Cargo.toml
cargo-avr/src/: main.rs
cargo-avr/src/attach/: board.rs  chip.rs  mod.rs
cargo-avr/src/flash/: board.rs  chip.rs  mod.rs
cargo-avr/src/run/: board.rs  chip.rs  mod.rs
cargo-avr/src/util/: avr_libc.rs  avrdude.rs  console.rs  mod.rs  options.rs
examples/arduino-diecimila/.cargo/: config.toml
examples/arduino-leonardo/.cargo/: config.toml
examples/arduino-mega1280/: README.md
examples/arduino-mega1280/.cargo/: config.toml
examples/arduino-nano/.cargo/: config.toml
examples/arduino-uno/.cargo/: config.toml
examples/atmega2560/.cargo/: config.toml
examples/nano168/.cargo/: config.toml
examples/sparkfun-promicro/.cargo/: config.toml
examples/sparkfun-promini-3v3/.cargo/: config.toml
examples/sparkfun-promini-5v/.cargo/: config.toml
examples/trinket-pro/.cargo/: config.toml
examples/trinket/.cargo/: config.toml
mcu/atmega-hal/: Cargo.toml
mcu/attiny-hal/: Cargo.toml
mcu/attiny-hal/src/: attiny167.rs  attiny2313.rs  attiny84.rs  attiny85.rs  attiny88.rs  globals.rs
mcu/attiny-hal/src/impl/: port.rs  spi.rs
ravedude/src/: config.rs  lib.rs  main.rs  ui.rs
ravedude/src/avrdude/: config.rs  mod.rs
ravedude/src/board/: config.rs  mod.rs
