[package]
name = "avr_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dunce = "1.0.5"
elf = "0.7.4"
merge = "0.1.0"

# Pin transitive dependencies on incompatible proc-macro2; see below
[dependencies.thiserror]
version = "=1.0.65"

[dependencies.ravedude]
path = "../ravedude"
version = "0.1.0"


[[bin]]
name = "cargo-avr"
path = "src/main.rs"

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"
